base/kubernetes/pelican-panel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pelican-panel
  namespace: pelican-panel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pelican-panel
  template:
    metadata:
      labels:
        app: pelican-panel
    spec:
      containers:
        - name: pelican-panel
          image: ghcr.io/pelican-dev/panel:latest
          ports:
            - containerPort: 443
          volumeMounts:
            - name: pelican-panel-data
              mountPath: /pelican-panel/data
            - name: pelican-panel-logs
              mountPath: /var/www/html/storage/logs
      volumes:
        - name: pelican-panel-data
          persistentVolumeClaim:
            claimName: pelican-panel-data
        - name: pelican-panel-logs
          persistentVolumeClaim:
            claimName: pelican-panel-logs
